app/src/test/resources/programs/valid/variables/initializingVariables.exe
foo main() -> Int = {
    let x: Nope = ();
    let mut y: Bool = true;
    let mut z: Int;
    z = 1337;
    0
}
