app/src/test/resources/programs/invalid/various/FooToLet.exe
foo fun() -> Int = 2;

foo main() -> Int = {
    let mut x: Int = 0;
    x = fun()
}
